Pint Changelog
==============

0.17 (unreleased)
-----------------

- Nothing changed yet.


0.16.1 (2020-09-22)
-------------------

- Fix unpickling, now it is using the APP_REGISTRY as expected.
  (Issue #1175)

0.16 (2020-09-13)
-----------------

- Fixed issue where performing an operation of a Quantity with certain units would perform an in-place
  unit conversion that modified the operand in addition to the returned value (Issues #1102 & #1144)
- Implements Logarithmic Units like dBm, dB or decade
  (Issue #71, Thanks Dima Pustakhod, Clark Willison, Giorgio Signorello, Steven Casagrande, Jonathan Wheeler)
- Drop dependency on setuptools pkg_resources to read package resources, using std lib importlib.resources instead.
  (Issue #1080)


0.15 (2020-08-22)
-----------------

- Change `Quantity` and `Unit` HTML (i.e., Jupyter notebook) repr away from LaTeX to a
  simpler, more performant pretty-text and table based repr inspired by Sparse and Dask.
  (Issue #654)
- Add `case_sensitive` option to registry for case (in)sensitive handling when parsing
  units (Issue #1145)
- Implement Dask collection interface to support Pint Quantity wrapped Dask arrays.
- Started automatically testing examples in the documentation
- Fixed an exception generated when reducing dimensions with three or more
  units of the same type
- Fixed right operand power for dimensionless Quantity to reflect numpy behavior. (Issue #1136)
- Eliminated warning when setting a masked value on an underlying MaskedArray.
- Add `sort` option to `formatting.formatter` to permit disabling sorting of component units in format string
- Implements Logarithmic Units like dBm, dB or decade
  (Issue #71, Thanks Dima Pustakhod, Giorgio Signorello, Jonathan Wheeler)


0.14 (2020-07-01)
-----------------

- Changes required to support Pint-Pandas 0.1.


0.13 (2020-06-17)
-----------------
- Reinstated support for pickle protocol 0 and 1, which is required by pytables
  (Issue #1036, Thanks Guido Imperiale)