@@ -4,7 +4,8 @@ Pint Changelog
 0.17 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix issue with reducable dimensionless units when using power (Quantity**ndarray)
+  (Issue #1185)
 
 
 0.16.1 (2020-09-22)
